5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/3555/executions/1643_1055.log
== SUBMITION (2019-04-08 18:17:02) 
-- CODE:
import math

v = float(input())
a = float(input())
d = float(input())

g = 9.8

r = (((v)**2)*sin(2a))/g

if(d == r):
	print("sim")
else:
	print("nao")
-- EXECUTION TIME:
0.136974
-- ERROR:
  File "/home/codebench/codes/1643/1055/main.py", line 9
    r = (((v)**2)*sin(2a))/g
                       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:17:04) 
-- CODE:
import math

v = float(input())
a = float(input())
d = float(input())

g = 9.8

r = (((v)**2)*sin(2a))/g

if(d == r):
	print("sim")
else:
	print("nao")
-- ERROR:
File "XXXX", line 9
    r = (((v)**2)*sin(2a))/g
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 18:17:24) 
-- CODE:
import math

v = float(input())
a = float(input())
d = float(input())

g = 9.8

r = (((v)**2)*(sin(2a)))/g

if(d == r):
	print("sim")
else:
	print("nao")
-- EXECUTION TIME:
0.123632
-- ERROR:
  File "/home/codebench/codes/1643/1055/main.py", line 9
    r = (((v)**2)*(sin(2a)))/g
                        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:17:26) 
-- CODE:
import math

v = float(input())
a = float(input())
d = float(input())

g = 9.8

r = (((v)**2)*(sin(2a)))/g

if(d == r):
	print("sim")
else:
	print("nao")
-- ERROR:
File "XXXX", line 9
    r = (((v)**2)*(sin(2a)))/g
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:18:24) 
-- CODE:
import math

v = float(input())
a = float(input())
d = float(input())

g = 9.8

r = ( ( (v)**2) * ( sin(2a) ) )/g

if(d == r):
	print("sim")
else:
	print("nao")
-- ERROR:
File "XXXX", line 9
    r = ( ( (v)**2) * ( sin(2a) ) )/g
                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:18:38) 
-- CODE:
from math import*

v = float(input())
a = float(input())
d = float(input())

g = 9.8

r = ( ( (v)**2) * ( sin(2a) ) )/g

if(d == r):
	print("sim")
else:
	print("nao")
-- ERROR:
File "XXXX", line 9
    r = ( ( (v)**2) * ( sin(2a) ) )/g
                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 18:18:59) 
-- CODE:
import math

v = float(input())
a = float(input())
d = float(input())

g = 9.8

r = ( ( (v)**2) * ( sin(2*a) ) )/g

if(d == r):
	print("sim")
else:
	print("nao")
-- EXECUTION TIME:
0.149904
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1643/1055/main.py", line 9, in <module>
    r = ( ( (v)**2) * ( sin(2*a) ) )/g
NameError: name 'sin' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:19:01) 
-- CODE:
import math

v = float(input())
a = float(input())
d = float(input())

g = 9.8

r = ( ( (v)**2) * ( sin(2*a) ) )/g

if(d == r):
	print("sim")
else:
	print("nao")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    r = ( ( (v)**2) * ( sin(2*a) ) )/g
NameError: name 'sin' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:20:21) 
-- CODE:
import math

v = float(input())
a = float(input())
d = float(input())

g = 9.8
a=radians(a)
r = ( ( (v)**2) * ( sin(2*a) ) )/g

if(d == r):
	print("sim")
else:
	print("nao")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    a=radians(a)
NameError: name 'radians' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:20:47) 
-- CODE:
import math

v = float(input())
a = float(input())
d = float(input())

g = 9.8
x=radians(a)
r = ( ( (v)**2) * ( sin(2*x) ) )/g

if(d == r):
	print("sim")
else:
	print("nao")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    x=radians(a)
NameError: name 'radians' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:20:59) 
-- CODE:
import math

v = float(input())
a = float(input())
d = float(input())

g = 9.8
x=radians(a)
r = ( ( (v)**2) * ( sin(2*x) ) )/g

if(d == r):
	print("sim")
else:
	print("nao")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    x=radians(a)
NameError: name 'radians' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:21:52) 
-- CODE:
from math import

v = float(input())
a = float(input())
d = float(input())

g = 9.8
x = radians(a)
r = ( ( (v)**2) * ( sin(2*x) ) )/g

if(d == r):
	print("sim")
else:
	print("nao")
-- ERROR:
File "XXXX", line 1
    from math import
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:22:11) 
-- CODE:
from math import*

v = float(input())
a = float(input())
d = float(input())

g = 9.8
x = radians(a)
r = ( ( (v)**2) * ( sin(2*x) ) )/g

if(d == r):
	print("sim")
else:
	print("nao")
-- OUTPUT:
nao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 18:22:23) 
-- CODE:
from math import*

v = float(input())
a = float(input())
d = float(input())

g = 9.8
x = radians(a)
r = ( ( (v)**2) * ( sin(2*x) ) )/g

if(d == r):
	print("sim")
else:
	print("nao")
-- EXECUTION TIME:
0.177485
-- TEST CASE 1:
---- input:
10.5
45.5
11.3
---- correct output:
sim
---- user output:
nao
-- TEST CASE 2:
---- input:
29.5
17.1
51.0
---- correct output:
nao
---- user output:
nao
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:24:02) 
-- CODE:
from math import*

v = float(input())
a = float(input())
d = float(input())

g = 9.8
x = radians(a)
r = ( ( (v)**2) * ( sin(2*x) ) )/g
y=abs(d-r)
if(y=<0.1):
	print("sim")
else:
	print("nao")
-- ERROR:
File "XXXX", line 11
    if(y=<0.1):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:24:12) 
-- CODE:
from math import*

v = float(input())
a = float(input())
d = float(input())

g = 9.8
x = radians(a)
r = ( ( (v)**2) * ( sin(2*x) ) )/g
y=abs(d-r)
if( y<= 0.1):
	print("sim")
else:
	print("nao")
-- OUTPUT:
sim
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 18:24:31) 
-- CODE:
from math import*

v = float(input())
a = float(input())
d = float(input())

g = 9.8
x = radians(a)
r = ( ( (v)**2) * ( sin(2*x) ) )/g
y=abs(d-r)
if( y<= 0.1):
	print("sim")
else:
	print("nao")
-- EXECUTION TIME:
0.168045
-- TEST CASE 1:
---- input:
10.5
45.5
11.3
---- correct output:
sim
---- user output:
sim
-- TEST CASE 2:
---- input:
29.5
17.1
51.0
---- correct output:
nao
---- user output:
nao
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
